Update content: quality blog post about centering clay, clean gallery images, sold out shop items, logo on homepage

--- a/gallery.html
+++ b/gallery.html
@@ -91,74 +91,41 @@
     <!-- Gallery Grid -->
     <section class="section">
         <div class="container">
-            <div class="grid grid-2" style="gap: 3rem;">
+            <div class="grid grid-2" style="gap: 2rem;">
                 
-                <div class="card">
-                    <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg" 
-                         alt="Handcrafted ceramic bowl with unique glaze pattern" 
-                         class="card-image" 
-                         style="height: 300px;"
+                <div class="card" style="border: none; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
+                    <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg"
+                         alt="Handcrafted ceramic bowl with unique glaze pattern"
+                         style="width: 100%; height: 400px; object-fit: cover; border-radius: 0.75rem;"
                          loading="lazy">
-                    <div class="card-body">
-                        <h3 class="mb-2">Artisan Bowl</h3>
-                        <p class="text-secondary mb-4">Wheel-thrown stoneware with natural ash glaze. Perfect for everyday use with a timeless aesthetic that celebrates the beauty of imperfection.</p>
-                        <div class="text-sm text-secondary">
-                            <div class="mb-1"><strong>Material:</strong> Stoneware clay</div>
-                            <div class="mb-1"><strong>Glaze:</strong> Natural ash glaze</div>
-                            <div><strong>Dimensions:</strong> 15cm diameter × 8cm height</div>
-                        </div>
-                    </div>
                 </div>
 
-                <div class="card">
-                    <img src="images/bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg" 
-                         alt="Contemporary ceramic vase with minimalist design" 
-                         class="card-image" 
-                         style="height: 300px;"
+                <div class="card" style="border: none; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
+                    <img src="images/bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg"
+                         alt="Contemporary ceramic vase with minimalist design"
+                         style="width: 100%; height: 400px; object-fit: cover; border-radius: 0.75rem;"
                          loading="lazy">
-                    <div class="card-body">
-                        <h3 class="mb-2">Modern Vessel</h3>
-                        <p class="text-secondary mb-4">Contemporary form meets traditional technique. Each piece is unique with subtle variations in glaze and texture that make it truly one-of-a-kind.</p>
-                        <div class="text-sm text-secondary">
-                            <div class="mb-1"><strong>Material:</strong> Porcelain clay</div>
-                            <div class="mb-1"><strong>Glaze:</strong> Matte white glaze</div>
-                            <div><strong>Dimensions:</strong> 12cm diameter × 18cm height</div>
-                        </div>
-                    </div>
                 </div>
 
-                <div class="card">
-                    <img src="images/bodhiswan_348863468_1167309003909433_5762684848837982962_n.jpg" 
-                         alt="Artisanal pottery piece showcasing traditional techniques" 
-                         class="card-image" 
-                         style="height: 300px;"
+                <div class="card" style="border: none; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
+                    <img src="images/bodhiswan_348863468_1167309003909433_5762684848837982962_n.jpg"
+                         alt="Artisanal pottery piece showcasing traditional techniques"
+                         style="width: 100%; height: 400px; object-fit: cover; border-radius: 0.75rem;"
                          loading="lazy">
-                    <div class="card-body">
-                        <h3 class="mb-2">Functional Stoneware</h3>
-                        <p class="text-secondary mb-4">Robust stoneware designed for daily use. The earthy tones and organic textures reflect the natural beauty of clay and fire working together.</p>
-                        <div class="text-sm text-secondary">
-                            <div class="mb-1"><strong>Material:</strong> High-fire stoneware</div>
-                            <div class="mb-1"><strong>Glaze:</strong> Iron-rich reduction glaze</div>
-                            <div><strong>Dimensions:</strong> Various sizes available</div>
-                        </div>
-                    </div>
                 </div>
 
-                <div class="card">
-                    <img src="images/bodhiswan_349131030_7008228542527475_7205180136632410620_n.jpg" 
-                         alt="Modern ceramic creation with distinctive finish" 
-                         class="card-image" 
-                         style="height: 300px;"
+                <div class="card" style="border: none; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
+                    <img src="images/bodhiswan_349131030_7008228542527475_7205180136632410620_n.jpg"
+                         alt="Modern ceramic creation with distinctive finish"
+                         style="width: 100%; height: 400px; object-fit: cover; border-radius: 0.75rem;"
                          loading="lazy">
-                    <div class="card-body">
-                        <h3 class="mb-2">Decorative Pieces</h3>
-                        <p class="text-secondary mb-4">Sculptural ceramics that blur the line between functional pottery and art. These pieces bring contemplative beauty to any space.</p>
-                        <div class="text-sm text-secondary">
-                            <div class="mb-1"><strong>Material:</strong> Mixed clay bodies</div>
-                            <div class="mb-1"><strong>Finish:</strong> Varied glazes and textures</div>
-                            <div><strong>Purpose:</strong> Decorative and functional</div>
-                        </div>
-                    </div>
+                </div>
+
+                <div class="card" style="border: none; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
+                    <img src="images/348982356_573566748281355_5155277251296915931_n.jpg"
+                         alt="Additional ceramic artwork"
+                         style="width: 100%; height: 400px; object-fit: cover; border-radius: 0.75rem;"
+                         loading="lazy">
                 </div>
 
             </div>
