--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
+                <div style="text-align: center; margin-bottom: 2rem;">
+                    <img src="images/348982356_573566748281355_5155277251296915931_n.jpg"
+                         alt="Bodhi Swan Ceramics Logo"
+                         style="width: 120px; height: 120px; object-fit: cover; border-radius: 50%; margin: 0 auto 1.5rem; display: block; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                </div>
                 <h1>Handcrafted Ceramics</h1>
                 <p>Modern minimalist pottery created with traditional wheel-throwing techniques in Brisbane. Each piece tells a story of craftsmanship and contemporary design.</p>
                 <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
