--- a/gallery.html
+++ b/gallery.html
@@ -91,58 +91,52 @@
     <!-- Gallery Grid -->
     <section class="section pottery-accent">
         <div class="container">
-            <!-- Masonry-style grid with artistic spacing -->
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; grid-auto-rows: auto;">
+            <!-- Square grid with minimal spacing -->
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 0.5rem; grid-auto-rows: auto;">
                 
-                <div class="card" style="border: none; box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1); position: relative; overflow: hidden;">
+                <div style="position: relative; overflow: hidden; aspect-ratio: 1 / 1;">
                     <img src="images/bodhiswan_348455879_578736824387942_7902606742957668195_n.jpg"
                          alt="Handcrafted ceramic bowl with unique glaze pattern"
-                         style="width: 100%; height: 350px; object-fit: cover; border-radius: 0.75rem; transition: transform 0.3s ease;"
+                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;"
                          loading="lazy"
                          onmouseover="this.style.transform='scale(1.05)'"
                          onmouseout="this.style.transform='scale(1)'">
-                    <!-- Subtle overlay for depth -->
-                    <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, transparent 0%, rgba(120, 119, 198, 0.02) 100%); pointer-events: none;"></div>
                 </div>
 
-                <div class="card" style="border: none; box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1); position: relative; overflow: hidden; margin-top: 3rem;">
+                <div style="position: relative; overflow: hidden; aspect-ratio: 1 / 1;">
                     <img src="images/bodhiswan_348471159_3630382333858035_296460734488849167_n.jpg"
                          alt="Contemporary ceramic vase with minimalist design"
-                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 0.75rem; transition: transform 0.3s ease;"
+                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;"
                          loading="lazy"
                          onmouseover="this.style.transform='scale(1.05)'"
                          onmouseout="this.style.transform='scale(1)'">
-                    <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, transparent 0%, rgba(255, 177, 153, 0.02) 100%); pointer-events: none;"></div>
                 </div>
 
-                <div class="card" style="border: none; box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1); position: relative; overflow: hidden;">
+                <div style="position: relative; overflow: hidden; aspect-ratio: 1 / 1;">
                     <img src="images/bodhiswan_348863468_1167309003909433_5762684848837982962_n.jpg"
                          alt="Artisanal pottery piece showcasing traditional techniques"
-                         style="width: 100%; height: 400px; object-fit: cover; border-radius: 0.75rem; transition: transform 0.3s ease;"
+                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;"
                          loading="lazy"
                          onmouseover="this.style.transform='scale(1.05)'"
                          onmouseout="this.style.transform='scale(1)'">
-                    <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, transparent 0%, rgba(120, 119, 198, 0.02) 100%); pointer-events: none;"></div>
                 </div>
 
-                <div class="card" style="border: none; box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1); position: relative; overflow: hidden; margin-top: 2rem;">
+                <div style="position: relative; overflow: hidden; aspect-ratio: 1 / 1;">
                     <img src="images/bodhiswan_349131030_7008228542527475_7205180136632410620_n.jpg"
                          alt="Modern ceramic creation with distinctive finish"
-                         style="width: 100%; height: 380px; object-fit: cover; border-radius: 0.75rem; transition: transform 0.3s ease;"
+                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;"
                          loading="lazy"
                          onmouseover="this.style.transform='scale(1.05)'"
                          onmouseout="this.style.transform='scale(1)'">
-                    <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, transparent 0%, rgba(255, 177, 153, 0.02) 100%); pointer-events: none;"></div>
                 </div>
 
-                <div class="card" style="border: none; box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1); position: relative; overflow: hidden; margin-top: 1rem;">
+                <div style="position: relative; overflow: hidden; aspect-ratio: 1 / 1;">
                     <img src="images/348982356_573566748281355_5155277251296915931_n.jpg"
                          alt="Additional ceramic artwork"
-                         style="width: 100%; height: 320px; object-fit: cover; border-radius: 0.75rem; transition: transform 0.3s ease;"
+                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;"
                          loading="lazy"
                          onmouseover="this.style.transform='scale(1.05)'"
                          onmouseout="this.style.transform='scale(1)'">
-                    <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, transparent 0%, rgba(120, 119, 198, 0.02) 100%); pointer-events: none;"></div>
                 </div>
 
             </div>
