style: Add 50% opacity and gaussian blur to background image
- Apply 50% opacity to IMG_3837.JPG background for subtle effect
- Add 2px gaussian blur filter for smooth, elegant appearance
- Maintain proper z-index layering for background, overlays, and content
- Preserve text readability with appropriate contrast overlays

--- a/classes.html
+++ b/classes.html
@@ -105,7 +105,19 @@
     <section class="section" id="main" style="padding: var(--space-2xl) 0;">
         <div class="container container-md">
             <!-- Tile Container -->
-            <div class="classes-tile" style="background: var(--bg); padding: var(--space-xl) var(--space-2xl); border-radius: var(--radius); box-shadow: var(--shadow); max-width: 650px; margin: 0 auto; text-align: center; transition: transform 0.3s ease, box-shadow 0.3s ease; cursor: pointer;">
+            <div class="classes-tile" style="
+                background:
+                    linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
+                    url('images/bodhiswan_348863468_1167309003909433_5762684848837982962_n.jpg') center/cover;
+                padding: var(--space-xl) var(--space-2xl);
+                border-radius: var(--radius);
+                box-shadow: var(--shadow);
+                max-width: 650px;
+                margin: 0 auto;
+                text-align: center;
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
+                cursor: pointer;
+            ">
                 <!-- Title and Subtitle inside tile -->
                 <div style="margin-bottom: var(--space-lg);">
                     <h1 style="font-family: var(--font-serif); font-size: clamp(1.8rem, 4vw, 2.5rem); font-weight: var(--weight-regular); color: var(--color-black); margin-bottom: var(--space-xs);">Pottery Classes</h1>
